# rust-parcer-g-code

./: .gitignore  Cargo.apk  Cargo.toml  README.md  build.rs  input_code.txt
.agents/skills/architecture/: SKILL.md
.agents/skills/egui-android-integration/: SKILL.md
.cargo/: config.toml
.zed/: ai_rules.md
src/: lib.rs
src/application/: formatter.rs  formatter_tests.rs  mod.rs  parser.rs  parser_tests.rs  validator.rs  validator_tests.rs
src/ast/: mod.rs
src/data_layer/: data_layer_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs
src/domain/: ast.rs  ast_tests.rs  lexer_trait.rs  mod.rs  token.rs  token_position.rs
src/formatter/: mod.rs
src/gui/: gcode_editor.slint
src/infrastructure/: highlight.rs  lexer.rs  lexer_tests.rs  mod.rs
src/infrastructure/lexer/: debug_indent.rs  error.rs  keywords.rs  mod.rs  parser.rs  raw_token.rs
src/infrastructure/platform/: android.rs  desktop.rs  mod.rs
src/interfaces/: cli.rs  mod.rs
src/interfaces/gui/: app.rs  app_tests.rs  gui_tests.rs  intent.rs  mod.rs  model.rs  update.rs  update_tests.rs  view.rs
src/interfaces/gui/app/: android.rs  app.rs  app_tests.rs  desktop.rs  desktop_tests.rs  mod.rs
src/interfaces/gui/integration/: app.rs  component.rs  data_layer.rs  mod.rs  msg.rs  state.rs  view_adapter.rs
src/interfaces/gui/intent/: intent.rs  mod.rs
src/interfaces/gui/model/: mod.rs  model.rs  model_tests.rs
src/interfaces/gui/update/: mod.rs  update.rs  update_tests.rs
src/interfaces/gui/view/: mod.rs  view.rs  view_android.rs  view_android_tests.rs  view_desktop.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/shared/: error.rs  error_tests.rs  i18n.rs  i18n_tests.rs  mod.rs
src/shared/locale/: en-US.yml  ru-RU.yml
test_content/: input_code.txt  params_while_in_while.txt  simple_paz_params.txt  text_params.txt
tests/: gui_tests.rs
