[package]
name = "code_parser"
version = "0.2.1"
edition = "2021"

description = "A parser and formatter library in Rust"

[features]
android = ["dep:egui_glow", "dep:glow"]  # Android-сборка: egui_glow + glow
desktop = ["dep:eframe", "dep:rfd"]  # десктопные зависимости
default = []  # не включаем ничего по умолчанию

[lib]
name = "code_parser"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "editor"
path = "src/bin/desktop_main.rs"
required-features = ["desktop"]

[[bin]]
name = "debug-tokens"
path = "src/bin/cli_debug.rs"

# Android APK (собирается только под Android)
# cargo apk build --bin android
[[bin]]
name = "android"
path = "src/bin/android_main.rs"
required-features = ["android"]

[dependencies]
thiserror = "2.0"
logos = "0.14"

# GUI — egui работает на всех платформах
egui = "0.31"
egui_glow = { version = "0.31", optional = true }
glow = { version = "0.16", optional = true }

# Десктоп (eframe + rfd)
eframe = { version = "0.31", default-features = false, features = ["default", "glow", "wgpu", "x11"], optional = true }
rfd = { version = "0.15", optional = true }

# Сериализация настроек
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Android (не собирается на десктопе)
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
log = "0.4"
glutin = { version = "0.31", default-features = false, features = ["egl"] }
ndk = { version = "0.9", features = ["rwh_05"] }
raw-window-handle = "0.5"

[build-dependencies]

[dev-dependencies]
tempfile = "3.0"
egui_kittest = { version = "0.31", features = ["eframe"] }

[profile.release]
opt-level = "z"     # Минимальный размер
lto = true           # Link-time optimization
codegen-units = 1    # Лучшая оптимизация
strip = true         # Удалить отладочную информацию
debug = "none"       # Не генерировать .pdb
